<resources>
    <string name="app_name">Einfach Deutsch</string>
    <string name="title_home">Fragen</string>
    <string name="title_Listening">Hören</string>
    <string name="title_Translation">Übersetzung</string>
    <string name="Translation">Übersetzung</string>
    <string name="Arabic" translatable="false">Arabisch</string>
    <string name="Germany">Deutsch</string>
    <string name="Translate">Übersetzen</string>
    <string name="Training">Wählen Sie einen Fragentyp aus</string>
    <string name="Listening">Zuhören und Aussprache</string>
    <string name="Complete">Vollständig</string>
    <string name="Match">Übereinstimmen</string>
    <string name="Rearrange">Neu anordnen</string>
    <string name="Choose">Wählen</string>
    <string name="Nouns">Substantive</string>
    <string name="Verbs">Verben</string>
    <string name="adjectives">Adjektive</string>
    <string name="Other">Andere</string>
    <string name="Next">Zurück</string>
    <string name="Show_Result">Zeige Ergebnis</string>
    <string name="Finish">Beenden</string>
    <string name="Restart">Neu starten</string>
    <string name="Submit">Einreichen</string>
    <string name="Note">Hinweis: Wenn es mehr als eine Antwort gibt, trennen Sie diese durch ein „-“.</string>
    <string name="modify_levels">Sie können es ändern über Ebenen</string>
    <string name="modify_questions_words">Ändern Sie ungefähr Fragen oder Worte</string>
    <string name="Questions">Fragen</string>
    <string name="Words">Wörter</string>
    <string name="Add_level">Neue Ebene hinzufügen</string>
    <string name="modify_question">Zu welcher Frage ändern?</string>
    <string name="modify_Words">Über welches Wort ändern?</string>


</resources>