<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingBottom="100dp"
    tools:context=".ui.admin.WordsActivity">

    <ImageView
        android:id="@+id/corner_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/corner_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
    <TextView
        android:id="@+id/title_2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:layout_marginStart="16dp"
        android:text="@string/Words"
        android:textColor="@color/greeen1"
        android:textSize="29sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Nouns_button"
        android:layout_width="0dp"
        android:layout_height="170dp"
        android:maxLines="1"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/corner_image"
        app:layout_constraintRight_toLeftOf="@id/adjectives_button"
        app:layout_constraintBottom_toTopOf="@id/Verbs_button"
        android:layout_marginTop="40dp"
        android:text="@string/Nouns"
        android:textAllCaps="false"
        android:background="@drawable/rounded_button_background"
        android:backgroundTint="@color/greeen"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/adjectives_button"
        android:layout_width="0dp"
        android:layout_height="170dp"
        android:maxLines="1"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/corner_image"
        app:layout_constraintLeft_toRightOf="@id/Nouns_button"
        app:layout_constraintBottom_toTopOf="@id/Other_button"
        android:layout_marginTop="40dp"
        android:text="@string/adjectives"
        android:background="@drawable/rounded_button_background"
        android:backgroundTint="@color/greeen2"
        android:layout_marginRight="12dp"
        android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Verbs_button"
        android:layout_width="0dp"
        android:layout_height="170dp"
        android:maxLines="1"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Nouns_button"
        app:layout_constraintRight_toLeftOf="@id/Other_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/Verbs"
        android:background="@drawable/rounded_button_background"
        android:backgroundTint="@color/greeen2"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="40dp"
        android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Other_button"
        android:layout_width="0dp"
        android:layout_height="170dp"
        android:maxLines="1"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/adjectives_button"
        app:layout_constraintLeft_toRightOf="@id/Verbs_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/Other"
        android:background="@drawable/rounded_button_background"
        android:backgroundTint="@color/greeen"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="40dp"
        android:textColor="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>
