<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingBottom="100dp"
    tools:context=".ui.admin.QuestionsActivity">
    <ImageView
        android:id="@+id/green_cicle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/corner_image"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/W1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="38dp"
        android:text="@string/Questions"
        android:textColor="@color/greeen1"
        android:textSize="29sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="5dp"
        app:layout_constraintRight_toLeftOf="@id/green_cicle"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/choose_button"
        android:layout_width="0dp"
        android:layout_height="170dp"
        android:maxLines="1"
        android:background="@drawable/rounded_button_background"
        android:backgroundTint="@color/greeen"
        android:text="@string/Choose"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/W1"
        app:layout_constraintRight_toLeftOf="@id/rearrange_button"
        app:layout_constraintBottom_toTopOf="@id/match_button"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:textColor="@color/white"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/rearrange_button"
        android:layout_width="0dp"
        android:layout_height="170dp"
        android:background="@drawable/rounded_button_background"
        android:backgroundTint="@color/greeen2"
        android:text="@string/Rearrange"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/W1"
        app:layout_constraintLeft_toRightOf="@id/choose_button"
        app:layout_constraintBottom_toTopOf="@id/complete_button"
        android:layout_marginTop="50dp"
        android:layout_marginRight="12dp"
        android:textColor="@color/white"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/match_button"
        android:layout_width="0dp"
        android:layout_height="170dp"
        android:maxLines="1"
        android:background="@drawable/rounded_button_background"
        android:backgroundTint="@color/greeen2"
        android:text="@string/Match"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/choose_button"
        app:layout_constraintRight_toLeftOf="@id/complete_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:textColor="@color/white"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/complete_button"
        android:layout_width="0dp"
        android:layout_height="170dp"
        android:maxLines="1"
        android:background="@drawable/rounded_button_background"
        android:backgroundTint="@color/greeen"
        android:text="@string/Complete"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rearrange_button"
        app:layout_constraintLeft_toRightOf="@id/match_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginRight="12dp"
        android:textColor="@color/white"
        />

</androidx.constraintlayout.widget.ConstraintLayout>