<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.Words_page.Words_page_Fragment"
        android:background="@color/white">

        <ImageView
            android:id="@+id/green_cicle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/greencicle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/title_2"
            android:layout_marginTop="38dp"
            android:layout_marginStart="16dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/Listening"
            android:textColor="@color/greeen1"
            android:textSize="29sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/Nouns_button"
            android:layout_width="153dp"
            android:layout_height="138dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/Nouns"
            android:textAllCaps="false"
            android:background="@drawable/rounded_button_background"
            android:backgroundTint="@color/greeen"
            android:textSize="20sp"
            android:layout_marginTop="224dp"
            android:layout_marginStart="21dp"

            />

        <Button
            android:id="@+id/Terms_button"
            android:layout_width="153dp"
            android:layout_height="138dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/Terms"
            android:textAllCaps="false"
            android:background="@drawable/rounded_button_background"
            android:backgroundTint="@color/greeen2"
            android:textSize="20sp"
            android:layout_marginTop="224dp"
            android:layout_marginEnd="21dp"

            />

        <Button
            android:id="@+id/Verbs_button"
            android:layout_width="153dp"
            android:layout_height="138dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/Verbs"
            android:textAllCaps="false"
            android:background="@drawable/rounded_button_background"
            android:backgroundTint="@color/greeen2"
            android:textSize="20sp"
            android:layout_marginTop="375dp"
            android:layout_marginStart="21dp"

            />

        <Button
            android:id="@+id/Other_button"
            android:layout_width="153dp"
            android:layout_height="138dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/Other"
            android:textAllCaps="false"
            android:background="@drawable/rounded_button_background"
            android:backgroundTint="@color/greeen"
            android:textSize="20sp"
            android:layout_marginTop="375dp"
            android:layout_marginEnd="21dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>