<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.admin.QuestionsOrWordsActivity">
    <ImageView
        android:id="@+id/corner_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/corner_image"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/corner_image"
        android:text="@string/modify_questions_words"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="38dp"
        android:layout_marginStart="16dp"/>
    <ImageView
        android:id="@+id/image_1"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        app:layout_constraintTop_toBottomOf="@id/corner_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/QuestionsButton"
        android:src="@drawable/question_mark"
        android:layout_marginBottom="24dp"/>
    <Button
        android:id="@+id/QuestionsButton"
        android:layout_width="300dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/image_1"
        app:layout_constraintBottom_toTopOf="@id/WordsButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginVertical="26dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="22dp"
        android:text="@string/Questions"
        android:textAllCaps="false"
        android:background="@drawable/button_rounded"
       />

    <Button
        android:id="@+id/WordsButton"
        android:layout_width="300dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/QuestionsButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="70dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="22dp"
        android:text="@string/Words"
        android:textAllCaps="false"
        android:background="@drawable/button_rounded"
        />

</androidx.constraintlayout.widget.ConstraintLayout>