<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <ImageView
        android:id="@+id/green_cicle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/corner_image"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <ImageView
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/green_cicle"
        app:layout_constraintBottom_toTopOf= "@id/result_text"
        android:id="@+id/emotion"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:src="@drawable/happy"


        />

    <TextView
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/emotion"
        android:padding="30dp"
        android:layout_marginTop="1dp"
        android:id="@+id/result_text"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:text="@string/Show_Result"
        android:textColor="@color/greeen1"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/restartButton"
        />

    <Button
        android:id="@+id/restartButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/rounded_button_background"
        android:backgroundTint="@color/greeen"
        android:text="@string/Restart"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result_text"
        app:layout_constraintBottom_toTopOf="@id/finishButton"

        />

    <Button
        android:id="@+id/finishButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"

        android:background="@drawable/rounded_button_background"
        android:backgroundTint="@color/greeen"
        android:text="@string/Finish"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/restartButton" />

</androidx.constraintlayout.widget.ConstraintLayout>